static/global.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700');

:root {
  --acm-blue: #2c91c6;
  --acm-bluer: #1e6cff;
  --acm-emerald: #21d19f;
  --acm-yellow: #ffd029;
  --acm-dark: #101315;
  --acm-gray: #292c2f;
  --acm-light: #f8f8f8;
  --acm-pink: #ff4365;
  --acm-purple: #9d35e7;
  --acm-red: #d41153;
  --acm-sky: #38b6ff;
  --acm-canvas: #eaeaea;

  --acm-general-rgb: 44, 145, 198;
  --acm-algo-rgb: 157, 53, 231;
  --acm-create-rgb: 255, 67, 101;
  --acm-dev-rgb: 30, 108, 255;

  --perma-light: #f8f8f8;
  --perma-dark: #101315;

  /* Generator: https://xgkft.csb.app/ (280px-1000px viewport-width, 1rem=16px) */
  --size-xxl: clamp(2.8125rem, 1.8403rem + 5.5556vw, 5.3125rem);
  --size-xl: clamp(2rem, 1.7545rem + 1.0909vw, 3.5rem);
  --size-lg: clamp(1.5rem, 1.3773rem + 0.5455vw, 2.25rem);
  --size-md: clamp(1.125rem, 1.0636rem + 0.2727vw, 1.5rem);
  --size-sm: clamp(1rem, 0.9795rem + 0.0909vw, 1.125rem);
  --size-xs: clamp(0.75rem, 0.7295rem + 0.0909vw, 0.875rem);
}

*,
html,
body,
#svelte {
  color: var(--acm-dark);
  padding: 0;
  margin: 0;
  transition: 0.2s;
}
html,
body,
#svelte {
  font-family: 'Poppins', 'Verdana', 'Helvetica', sans-serif;
  font-display: fallback;
}

body {
  background-color: var(--acm-light);
  transition: 0.2s;
}

.brand-bold,
.brand-em {
  font-weight: 700;
}

.brand-header,
.headers {
  font-weight: 600;
}

.brand-med {
  font-weight: 500;
}

.acm-blue,
.brand-blue {
  color: var(--acm-blue);
}

.acm-bluer,
.brand-bluer {
  color: var(--acm-bluer);
}

.acm-emerald,
.brand-emerald {
  color: var(--acm-emerald);
}

.acm-yellow,
.brand-yellow {
  color: var(--acm-yellow);
}

.acm-dark,
.brand-dark {
  color: var(--acm-dark);
}

.acm-gray,
.brand-gray {
  color: var(--acm-gray);
}

.acm-light,
.brand-light {
  color: var(--acm-light);
}

.acm-pink,
.brand-pink {
  color: var(--acm-pink);
}

.acm-purple,
.brand-purple {
  color: var(--acm-purple);
}

.acm-red,
.brand-red {
  color: var(--acm-red);
}

.acm-sky,
.brand-sky {
  color: var(--acm-sky);
}

.size-xxl {
  font-size: var(--size-xxl);
}

.size-xl {
  font-size: var(--size-xl);
}

.size-lg {
  font-size: var(--size-lg);
}

.size-md {
  font-size: var(--size-md);
}

.size-sm {
  font-size: var(--size-sm);
}

.size-xs {
  font-size: var(--size-xs);
}

.light {
  --acm-dark: #101315;
  --acm-light: #f8f8f8;
  --acm-canvas: #eaeaea;
  --navbar-bg: var(--acm-light);
  --footer-bg: var(--acm-dark);
  --card-bg: var(--acm-light);
  --button-bg: var(--acm-dark);
  --button-hover: var(--acm-blue);
}

.dark {
  --acm-dark: #f8f8f8;
  --acm-light: #101315;
  --acm-canvas: #161b22;
  --navbar-bg: var(--acm-light);
  --footer-bg: var(--acm-gray);
  --card-bg: var(--acm-gray);
  --button-bg: var(--acm-gray);
  --button-hover: #3d4043;
}

@media (prefers-color-scheme: light) {
  body:not(.dark) {
    --acm-dark: #101315;
    --acm-light: #f8f8f8;
    --acm-canvas: #eaeaea;
    --navbar-bg: var(--acm-light);
    --footer-bg: var(--acm-dark);
    --card-bg: var(--acm-light);
    --button-bg: var(--acm-dark);
    --button-hover: var(--acm-blue);
  }
}

@media (prefers-color-scheme: dark) {
  body:not(.light) {
    --acm-dark: #f8f8f8;
    --acm-light: #101315;
    --acm-canvas: #161b22;
    --navbar-bg: var(--acm-light);
    --footer-bg: var(--acm-gray);
    --card-bg: var(--acm-gray);
    --button-bg: var(--acm-gray);
    --button-hover: #3d4043;
  }
}

